<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BrowserDeps</string><string name="main">Main Settings</string>
    
    
    <string name="developed">Developed by nd0ut</string><string name="other">Other</string><string name="tSetAsDefault">Set default browser</string>
    <string name="sSetAsDefault">Check &quot;Use by default for this action&quot; and tap BrowserDeps</string>
    
	<string name="tWifi">Wi-fi</string>
    <string name="sWifi">Will be launched when wi-fi connected</string>
    
    <string name="tMobile">Mobile network</string>
    <string name="sMobile">Will be launched when mobile network connected</string>
    
    <string name="tWimax">Wimax</string>
    <string name="sWimax">Will be launched when wimax connected</string>
    
    <string name="tOffline">Offline</string>
    <string name="sOffline">Will be launched when there is no any connected network</string>
    <string name="debug">Debug mode</string>
    <string name="updates">Check for updates</string>
    <string name="conerror">Connection error</string>
    <string name="newver">New version is available!</string>
    <string name="nonewver">There is no new version :(</string>
    <string name="checkingupd">Checking...</string>
    <string name="nobrowser">No browser selected for this connection</string>
    <string name="sendme">Send email</string>
    
    
    
    
</resources>
